Change Company Name

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.educard"
+        applicationId "com.byteforce_crew.educard"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
