--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.educard">
+    package="com.byteforce_crew.educard">
 
     <application
         android:allowBackup="true"
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LoginApp">
-        <activity android:name="com.example.educard.boundaries.RegistrationPage"></activity>
-        <activity android:name="com.example.educard.boundaries.HomePage" />
-        <activity android:name="com.example.educard.boundaries.LoginPage">
+        <activity android:name="com.byteforce_crew.educard.boundaries.RegistrationPage"></activity>
+        <activity android:name="com.byteforce_crew.educard.boundaries.HomePage" />
+        <activity android:name="com.byteforce_crew.educard.boundaries.LoginPage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
